fixing step 3 vertical alignment

--- a/media/css/zamboni/developers.css
+++ b/media/css/zamboni/developers.css
@@ -181,7 +181,7 @@ ul.refinements:last-child {
 #submit-describe #trans-name {
     display: inline-block;
     margin-right: 15px;
-    width: 375px;
+    vertical-align: bottom;
 }
 
 #submit-describe #trans-name input {
